Download page update

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -93,7 +93,7 @@ label.design=Design(s)
 label.contact=We are always looking at ways to improve MetaboLights. Please using the global <a href="http://www.ebi.ac.uk/support/metabolights">MetaboLights EBI Support & Feedback form</a> or email us directly at <a href="mailto:metabolights-help@ebi.ac.uk ">metabolights-help@ebi.ac.uk</a>
 label.message=Message to the MetaboLights team
 # label.aboutMetab=About MetaboLights
-label.ftpDownload=Download: Experiment
+label.ftpDownload=Download: Study
 # label.ftp=Files
 label.searchFilter=Filter your results
 label.publicDate=Select the public release date
@@ -169,22 +169,22 @@ menu.Ebeye=Ebeye-Help
 menu.parameters=parameters
 
 # Happy messages
-msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
+msg.metabolights=MetaboLights: a database for metabolomics studies and derived information
 msg.metabolightsAbout=<a href="about">About MetaboLights.</a>
-msg.metabolightsAbout1=MetaboLights is a database for Metabolomics experiments and derived information. The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic experiments. MetaboLights is the recommended Metabolomics repository for a number of <a href="about#support-journals">leading journals</a>.
+msg.metabolightsAbout1=MetaboLights is a database for Metabolomics studies and derived information. The database is cross-species, cross-technique and covers metabolite structures and their reference spectra as well as their biological roles, locations and concentrations, and experimental data from metabolic studies. MetaboLights is the recommended Metabolomics repository for a number of <a href="about#support-journals">leading journals</a>.
 msg.metabolightsAbout2=We will provide search services around spectral similarities and chemical structures.
 msg.metabolightsAbout3=We offer user-submission tools and have strong reporting capabilities. We use and further develop de-facto standard formats where various components are encapsulated, such as the encoded spectral and chromatographic data, and associated information about the chemical structure, as well as metadata describing assays and the study as a whole.
 msg.metabolightsAbout4=MetaboLights semantic quality is based on various controlled vocabularies and ontologies linking data to existing resources such as <a href="http://www.brenda-enzymes.org/">BRENDA</a>. <br/> We collaborate closely with major parties in world-wide metabolomics communities, such as the <a href="http://www.metabolomicssociety.org/">Metabolomics Society</a> and the associated Metabolomics Standards Initiative (MSI).
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <a href="http://www.bbsrc.ac.uk/research/grants-search/AwardDetails/?FundingReference=BB%2fL024152%2f1">BB/L024152/1</a>. Previous BBSRC grant reference is <a href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</a>.<br/>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboLights metabolomics database with various different components focused on both data standards and primary experimental data. MetaboLights is cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="https://www.ebi.ac.uk/about/people/claire-odonovan">O’Donovan group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
 msg.metabolightsAbout6=MetaboLights submissions are powered by the <a href="https://isa-tools.org/">ISA software suite.</a> so experimental data gets submitted in <a href="https://isa-tools.org/format/specification.html">ISA-Tab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
-msg.metabolightsAbout7=All public MetaboLights experiments can be downloaded from our public FTP site. Server : ftp.ebi.ac.uk ; directory path : /pub/databases/metabolights/studies/public/ (You would need a FTP client software like Filezilla to access and download).  Please find the zip archives under the "public" folder. Each public study can be found in the corresponding MTBLS-id folder.<br/>Please check our <a href="https://www.ebi.ac.uk/metabolights/editor/guides/Files/Download" target="_blank">guides</a> for more information on how to download data from MetaboLights.
+msg.metabolightsAbout7=All public MetaboLights studies can be downloaded from our public FTP site. Server : ftp.ebi.ac.uk ; directory path : /pub/databases/metabolights/studies/public/ (You would need a FTP client software like Filezilla to access and download).  Please find the zip archives under the "public" folder. Each public study can be found in the corresponding MTBLS-id folder.<br/>Please check our <a href="https://www.ebi.ac.uk/metabolights/editor/guides/Files/Download" target="_blank">guides</a> for more information on how to download data from MetaboLights.
 msg.metabolightsAbout8=You can also take a look at the <a target="_blank" href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/plugin/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
 msg.metabolightsAbout11=Please take a look at our comprehensive <a href="help">help</a> section.
 msg.metabolightsMtblsIsaCreator=<b>MetaboLights ISAcreator software download</b>
 msg.metabolightsAbout12= To make it easy for new users, please download and just unzip our pre-packaged ISAcreator with plugin and configurations.
-msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a target="_blank" href="https://github.com/EBI-Metabolights/MetaboLights">here</a>.  To populate your local MetaboLights database, you simply upload experiments (Studies) of interest.
+msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a target="_blank" href="https://github.com/EBI-Metabolights/MetaboLights">here</a>.  To populate your local MetaboLights database, you simply upload Studies of interest.
 msg.metabolightsAbout14=Help topics
 msg.metabolightsAbout15=<p>For submission to <strong>MetaboLights</strong>, we require submissions to be in the ISA-Tab format. This format can be created and edited using a variety of spreadsheet tools.</p><p>We recommend two tools in particular for creation of ISA-Tab files and subsequent submission to our repository:</p><ul><li>ISAcreator: a standalone desktop application with a multitude of facilities to enable standards-compliant creation of ISA-Tab. More information is available from https://isa-tools.org; and</li><li>Google Spreadsheets with OntoMaton: OntoMaton is an add-on to Google Spreadsheets enabling ontology search and tagging within the collaborative Google Spreadsheet environment.</li></ul><br/><p>A Google Doc template for MetaboLights submissions will be coming soon</a>.</p><p>OntoMaton is developed and maintained by the <a href="https://isa-tools.org" target="_blank">ISA team</a>. You can find out more about <strong>OntoMaton</strong> from the project page <a href="http://github.com/ISA-tools/OntoMaton" target="_blank">http://github.com/ISA-tools/OntoMaton</a>. </p>
 msg.metaboLightsAbout16=Please take a look at our comprehensive <a href="help" target="_blank">help</a> section for online study submission and ISA creator.
@@ -217,7 +217,7 @@ msg.upload.desc2=Here is the link to the <a href="help">"How to submit to Metabo
 msg.upload.desc3=<b>IMPORTANT</b>: Please ensure your study has passed <b>Stage 1 (ISAcreator) validation</b> prior to submitting to MetaboLights.<br> Stage 1 validation is available in ISACreator, under "file","Validate ISAtab". After your study has successfully passed Stage 1 validation, please follow the procedures outlined in our submission tutorial to pass <b>Stage 2 (Online) validation</b>.
 msg.upload.notValid=Please provide a valid file name..
 msg.upload.queueditems=You have currently some studies in the queue waiting to be processed. <b>Please, wait for your previous studies to be processed before submitting a new one.</b>
-msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
+msg.uploaded.ok1=You have successfully uploaded your study to MetaboLights.
 msg.uploaded.ok2=Please, bare in mind that we have replaced your identifiers with our unique MetaboLights accession numbers.
 msg.uploaded.ok3=REPLACEMENT DETAILS
 msg.uploaded.ok4= has been replaced with
@@ -384,7 +384,7 @@ ref.compound.title=Title
 ref.compound.description=Description
 
 #Frontier Messages
-frontier.strapline.message=A database for Metabolomics experiments and derived information
+frontier.strapline.message=A database for Metabolomics studies and derived information
 
 # For form field verification email
 NotEmpty.emailAddress.emailAddress=Email address must not be empty.
