initial status udpates

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ label.isatabZipFile=Choose ISA-tab archive file
 # label.filename=File name
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=<b>SUBMISSION CHECKLIST</b> - In order for your study to be published and made available to the world, the following conditions must be satisfied: <br/> <b>A</b>. Stage 1 (ISAcreator) validation has successfully passed.<br/><b>B</b>. Stage 2 (Online) validation has successfully passed. <br/> <b>C</b>. The submitter (you) promotes the study status from <i>Submitted</i> to <i>In Curation</i> (minimum 28 days is required for our validation and curation). <br><b>D</b>. The curation team approves the study and moves the study status from <i>In Curation</i> to <i>In Review</i>. <br/><b>E</b>. Your public release date is reached.
+label.experimentMsgPublic=<b>SUBMISSION CHECKLIST</b> - In order for your study to be published and made available to the world, the following conditions must be satisfied: <br/> <b>A</b>. Stage 1 (ISAcreator) validation has successfully passed.<br/><b>B</b>. Stage 2 (Online) validation has successfully passed. <br/> <b>C</b>. The submitter (you) promotes the study status from <i>Provisional</i> to <i>Private</i> (minimum 28 days is required for our validation and curation). <br><b>D</b>. <br/><b>D</b>. Your public release date is reached.
 label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission. Additional online validations will be carried out upon submission and will be summarised in the <strong>'Study Validation'</strong> tab.
 label.email=Email address
 label.apiToken=API token
@@ -105,9 +105,9 @@ label.publictoprivate=Make study private
 label.deleteStudy=Delete study
 label.viewMySubmissions=View my submissions
 label.submitNewStudy=Submit a new study
-label.submitNewStudySub=Use this option if your study has not been<br/> submitted before
+label.submitNewStudySub=Use this option if your study has not been<br/> provisional before
 label.updateOldStudy=Update an existing study
-label.updateOldStudySub=Use this option to update a previously<br/> submitted study
+label.updateOldStudySub=Use this option to update a previously<br/> provisional study
 label.studyDesign=Study Design
 label.protocols=Protocols
 label.data=Instrumentation
